<resources>
    <string name="app_name">Langones_MultiCalc_1</string>
    <string name="geometry">Geometry</string>
    <string name="physics">Physics</string>
    <string name="prism">PRISM</string>
    <string name="rectangular_prism">RECTANGULAR PRISM</string>
    <string name="sphere">SPHERE</string>
    <string name="cylinder">CYLINDER</string>
    <string name="speed">SPEED</string>
    <string name="distance">DISTANCE</string>
    <string name="time">TIME</string>
    <string name="density">DENSITY</string>
    <string name="force">FORCE</string>
    <string name="shape">SHAPE</string>
    <string name="variable">VARIABLE</string>
    <string name="area">AREA</string>
    <string name="volume">VOLUME</string>
    <string name="calculate">CALCULATE</string>
    <string name="input">Enter number here..</string>
    <string name="yellowgone">yellow begone</string>
</resources>